# ptars

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  crate.yml  release.yaml  release.yml
docs/: api.md  development.md  faq.md  getting-started.md  index.md  requirements.txt  requirements.txt.in
notebooks/: README.md  demonstrator.ipynb  demonstrator.proto  requirements.txt
protarrowrs/: __init__.py  internal.py
protos/: bench.proto  simple.proto
protos/ptars_protos/: bench.proto  benchmark.proto  imported.proto  importer.proto  simple.proto
ptars/: Cargo.toml  README.md  __init__.py  internal.py
ptars-core/: Cargo.toml  README.md
ptars-core/src/: config.rs  converter.rs  lib.rs  proto_to_arrow.rs
ptars-python/: Cargo.toml
ptars-python/src/: lib.rs
ptars/src/: arrow_to_proto.rs  arrow_to_proto_direct.rs  config.rs  converter.rs  error.rs  ffi.rs  handler.rs  lib.rs  proto_to_arrow.rs  proto_to_arrow_direct.rs
ptars/tests/: handler_test.rs
python/ptars/: __init__.py  config.py  internal.py
python/test/: random_generator.py  test_api.py  test_ptars.py
python/test/benchmark/: test_benchmark.py
python/test/unit/: test_api.py  test_config.py  test_imported.py  test_ptars.py  test_size_delimited.py
scripts/: protoc.py
src/: arrow_to_proto.rs  bindings.rs  converter.rs  lib.rs  main.rs  proto_to_arrow.rs  utils.rs
test/: test_protarrowrs.py  test_ptars.py
tests/arrow-version-independence/: Cargo.toml
tests/arrow-version-independence/src/: lib.rs
