[dependencies]
arrow = {version = "59", features = ["pyarrow"]}
arrow-array = "59"
arrow-schema = "59"
prost = "0.14.4"
prost-reflect = "0.16.4"
ptars-core = {path = "../ptars-core"}
pyo3 = {version = "0.28.3", features = ["abi3-py310"]}

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
crate-type = ["cdylib"]
name = "ptars_python"
path = "src/lib.rs"

[package]
authors = ["0x26res <0x26res@gmail.net>"]
description = "Python bindings for ptars - Fast protobuf to Arrow conversion"
edition = "2021"
license = "Apache-2.0"
name = "ptars-python"
publish = false  # This crate is only for Python bindings, not published to crates.io
version.workspace = true

[package.metadata.maturin]
name = "ptars._lib"
