[package]
name = "ptars"
version = "0.0.7"
authors = ["0x26res <0x26res@gmail.net>"]
description = "Fast conversion from protobuf to Apache Arrow and back"
edition = "2021"
homepage = "https://github.com/0x26res/ptars"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0x26res/ptars"
keywords = ["protobuf", "arrow", "serialization", "data"]
categories = ["encoding", "data-structures"]

[dependencies]
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
chrono = "0.4.42"
prost = "0.14.1"
prost-reflect = "0.16.3"


[lib]
name = "ptars"
path = "src/lib.rs"
