[dependencies]
# arrow and prost are internal implementation details: they must never appear
# in this crate's public API. Data is exchanged through the Arrow C Data
# Interface (see src/ffi.rs), so consumers can use any arrow version.
arrow = {version = "59", features = ["ffi"]}
arrow-array = "59"
arrow-schema = "59"
prost = "0.14.4"
prost-reflect = "0.16.4"

[lib]
name = "ptars"
path = "src/lib.rs"

[package]
authors = ["0x26res <0x26res@gmail.net>"]
categories = ["encoding", "data-structures"]
description = "Fast conversion from protobuf to Apache Arrow and back"
edition = "2021"
homepage = "https://github.com/0x26res/ptars"
keywords = ["protobuf", "arrow", "serialization", "data"]
license = "Apache-2.0"
name = "ptars"
readme = "README.md"
repository = "https://github.com/0x26res/ptars"
version.workspace = true
